--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -149,7 +149,7 @@
 <h2 id="行為準則"><a class="header" href="#行為準則">行為準則</a></h2>
 <p>Rust 專案有一個 <a href="http://rust-lang.org/policies/code-of-conduct">行為準則</a>會囊括其下專案，這當然包含此專案。請遵守這些準則！</p>
 <h2 id="翻譯流程"><a class="header" href="#翻譯流程">翻譯流程</a></h2>
-<p>我們的 <a href="https://github.com/rust-lang.tw/rfcs/pulls">open pull requests</a> 接受任何翻譯或修正文章的 PR。在想開始翻譯一篇 RFC 前請先開一個 issue，如果你有希望被翻譯的也一樣歡迎開。翻譯完文章後請在每一篇文底加上以下以下資訊：</p>
+<p>我們的 <a href="https://github.com/rust-tw/rfcs/pulls">open pull requests</a> 接受任何翻譯或修正文章的 PR。在想開始翻譯一篇 RFC 前請先開一個 issue，如果你有希望被翻譯的也一樣歡迎開。翻譯完文章後請在每一篇文底加上以下以下資訊：</p>
 <pre><code>translators: [Firstname Lastname &lt;email@address.tld&gt;]
 commit: [The commit link this page based on](https://github.com/rust-lang/rfcs/...)
 updated: YYYY-MMM-DD
